# scrapper

./: .dockerignore  .gitignore  Dockerfile  README.md  airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  docker-compose.yml  main.py  pyproject.toml  raw_ram_data.jsonl  simple_auth_manager_passwords.json.generated  transform.py
dags/: first_dag.py
src/: main.py
src/scrapper/: scrapper.py
src/settings/: config.py
src/spark/: transform.py
